# la-proteina

./: .gitignore  CLAUDE.md  analyse_run.py  artificial_metadata.py  check_data.py  check_latents.py  check_processed.py  clean_csv.py  clean_latents.py  clear_cache.py  content_masterarbeit.md  data_audit.py  delete_corrupted_latents.py  environment.yaml  experiments.md  nohup.out  precompute_latents.py  prepare_data.py  prepare_data_800.py  run_n30_pipeline.sh  slurm_developability_27475529.out  slurm_developability_27733951.out  slurm_developability_27736265.out  slurm_developability_27754523.out  slurm_developability_27757144.out  slurm_developability_27794631.out  slurm_precompute_27754627.out  slurm_prepare_data_27670761.out  slurm_prepare_data_27712938.out  slurm_prepare_data_27714432.out  slurm_steerability_part1_27754628.out  slurm_steerability_part2_27796466.out  variants.md  verify_processed.py
laproteina_steerability/: DESIGN_NOTES.md  latent_interpretability.py  nohup_multitask_t1.out  prep_properties.py  pyproject.toml
laproteina_steerability/config/: default.yaml
laproteina_steerability/exports/camsol_batch/: proteins_metadata.csv
laproteina_steerability/outputs/: part1_summary.md  part2_summary.md  run_metadata.json
laproteina_steerability/outputs/tables/: dim_utilization.csv  goodhart_pairs.csv  interpretability_per_class_accuracy.csv  interpretability_probe_results.csv  marginal_stats.csv  mutual_information.csv  pca_results.csv  pearson_correlation.csv  probe_results.csv  (+7 more)
laproteina_steerability/scripts/: add_noisy_latents.py
(+506 files in other folders)
